Form con jquery

--- a/form_jquery/index.html
+++ b/form_jquery/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Ingresar</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
 
@@ -21,7 +22,7 @@
 <!-- formulario -->
 <section>
 
-    <form id="app-login" action="">
+    <form id="login" action="" onsubmit="return false;">
 
         <div>
           <label for="nombre">Nombre:</label>
@@ -56,7 +57,7 @@
                   </select>
         </div>
         <div>
-          <input id="enviar" type="button" value="Agregar">
+          <input id="enviar" type="submit" value="Agregar">
         </div>
         <div>
           <input id="limpiar" type="button" value="Limpiar">
@@ -88,7 +89,7 @@
 
 
 
-
   </body>
+  <script type="text/javascript" src="jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </html>
