validacion de formularios

--- a/form_jquery/index.html
+++ b/form_jquery/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Ingresar</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
 
@@ -22,7 +21,7 @@
 <!-- formulario -->
 <section>
 
-    <form id="login" action="" onsubmit="return false;">
+    <form id="login" action="">
 
         <div>
           <label for="nombre">Nombre:</label>
@@ -35,7 +34,7 @@
         </div>
         <div>
           <label for="fecha">Fecha de nacimiento:</label>
-          <input name="fecha" id="fecha" type="date"  required>
+          <input name="fecha" id="fecha" type="date"  >
         </div>
         <div>
           <label for="telefono">Telefono:</label>
